--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,26 +9,29 @@
         const roomId = "<%=roomId %>"
     </script>
 
+    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
 
     <title>Document</title>
 
     <style>
-        #video-grid{
-           display: grid; 
-           grid-template-columns: repeat(auto-fill, 300px);
-           grid-auto-rows: 300px;
+        #video-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 300px);
+            grid-auto-rows: 300px;
         }
 
-        video{
+        video {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     </style>
 </head>
+
 <body>
     <div id="video-grid"></div>
 </body>
+
 </html>
