--- a/views/room.ejs
+++ b/views/room.ejs
@@ -20,6 +20,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, 300px);
             grid-auto-rows: 300px;
+            gap: 20px;
         }
 
         video {
